# sdkwork-image

./: .gitignore  .npmrc  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
apis/: README.md
apps/: README.md
apps/sdkwork-image-common/: README.md
apps/sdkwork-image-flutter-mobile/: AGENTS.md  pubspec.yaml  sdkwork.app.config.json
configs/: README.md
crates/sdkwork-api-image-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-image-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-image-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-image-claw-router-provider-service/: Cargo.toml  README.md
crates/sdkwork-image-claw-router-provider-service/specs/: README.md  component.spec.json
crates/sdkwork-image-claw-router-provider-service/src/: gateway.rs  normalization.rs  requests.rs
crates/sdkwork-image-claw-router-provider-service/tests/: claw_router_provider_standard.rs
crates/sdkwork-image-database-host/: Cargo.toml
crates/sdkwork-image-database-host/src/: lib.rs
crates/sdkwork-image-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-image-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-image-generation-host/: Cargo.toml  README.md
crates/sdkwork-image-generation-host/specs/: README.md  component.spec.json
crates/sdkwork-image-generation-host/src/: background.rs  catalog_service.rs  host.rs  lib.rs  service.rs  subject.rs  wire.rs
crates/sdkwork-image-generation-mcp-service/: Cargo.toml  README.md
crates/sdkwork-image-generation-mcp-service/specs/: README.md  component.spec.json
crates/sdkwork-image-generation-mcp-service/src/: catalog.rs  dto.rs  error.rs  handler.rs  lib.rs  task_store.rs  transport.rs
crates/sdkwork-image-generation-mcp-service/tests/: mcp_contract_standard.rs
crates/sdkwork-image-generation-provider-adapter/: Cargo.toml  README.md
crates/sdkwork-image-generation-provider-adapter/specs/: README.md  component.spec.json
crates/sdkwork-image-generation-provider-adapter/src/: adapter.rs  lib.rs  normalization.rs  requests.rs  routing.rs
crates/sdkwork-image-generation-provider-adapter/tests/: provider_adapter_standard.rs
crates/sdkwork-image-generation-provider-spi/: Cargo.toml  README.md
crates/sdkwork-image-generation-provider-spi/specs/: component.spec.json
crates/sdkwork-image-generation-provider-spi/src/: error.rs  lib.rs  model.rs  normalization.rs  provider.rs  registry.rs
crates/sdkwork-image-generation-provider-spi/tests/: provider_spi_standard.rs
crates/sdkwork-image-generation-repository-sqlx/: Cargo.toml  README.md
crates/sdkwork-image-generation-repository-sqlx/migrations/: 0002_image_generation_drive_runtime.sql
crates/sdkwork-image-generation-repository-sqlx/specs/: README.md  component.spec.json
crates/sdkwork-image-generation-repository-sqlx/src/: bootstrap.rs  error.rs  lib.rs
crates/sdkwork-image-generation-repository-sqlx/src/catalog/: memory.rs  mod.rs  sqlx_store.rs  wire.rs
crates/sdkwork-image-generation-repository-sqlx/src/projection/: background.rs  lifecycle.rs  memory.rs  mod.rs  scope.rs  sqlx_store.rs
crates/sdkwork-image-generation-repository-sqlx/tests/: image_storage_standard.rs
crates/sdkwork-image-generation-runtime-service/: Cargo.toml  README.md
crates/sdkwork-image-generation-runtime-service/specs/: README.md  component.spec.json
crates/sdkwork-image-generation-runtime-service/src/: drive_import.rs  drive_runtime.rs  lib.rs  orchestration.rs  provider_fetch.rs  provider_fetch_http.rs
crates/sdkwork-image-generation-runtime-service/tests/: runtime_drive_import_standard.rs
crates/sdkwork-image-generation-service/: Cargo.toml  README.md
crates/sdkwork-image-generation-service/specs/: README.md  component.spec.json
crates/sdkwork-image-generation-service/src/: lib.rs  provider_service.rs  wire.rs
crates/sdkwork-image-generation-service/tests/: image_core_standard.rs  provider_service_standard.rs
crates/sdkwork-image-generation-workflow-service/: Cargo.toml  README.md
crates/sdkwork-image-generation-workflow-service/specs/: README.md  component.spec.json
crates/sdkwork-image-generation-workflow-service/src/: claw_router_dispatch.rs  dispatch_rehydrate.rs  lib.rs  provider_dispatch.rs
crates/sdkwork-image-generation-workflow-service/tests/: image_generation_service_standard.rs
crates/sdkwork-router-image-open-api/: Cargo.toml  README.md
crates/sdkwork-router-image-open-api/specs/: README.md  component.spec.json
crates/sdkwork-router-image-open-api/src/: lib.rs  manifest.rs  web_bootstrap.rs
crates/sdkwork-router-image-open-api/tests/: image_open_api_route_manifest.rs  open_route_manifest.rs
crates/sdkwork-routes-image-app-api/: Cargo.toml  README.md
crates/sdkwork-routes-image-app-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-image-app-api/src/: api_response.rs  http_route_manifest.rs  lib.rs  manifest.rs  routes.rs  subject.rs  web_bootstrap.rs
crates/sdkwork-routes-image-app-api/tests/: image_app_api_route_manifest.rs
crates/sdkwork-routes-image-open-api/: Cargo.toml  README.md
crates/sdkwork-routes-image-open-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-image-open-api/src/: http_route_manifest.rs  lib.rs  manifest.rs  web_bootstrap.rs
crates/sdkwork-routes-image-open-api/tests/: image_open_api_route_manifest.rs  open_route_manifest.rs
database/: README.md  database.manifest.json
deployments/: README.md
docs/: INDEX.yaml  README.md
docs/product/prd/: PRD.md
examples/: README.md
jobs/: README.md
plugins/: README.md
scripts/: README.md
sdks/: README.md  image-rust-workspace-standard.test.mjs  materialize-image-v3-openapi-boundaries.mjs  materialize-image-v3-openapi-boundaries.test.mjs
specs/: README.md  component.spec.json  iam.module.manifest.json
tools/: README.md  materialize_image_database_contract.mjs
types/: sdkwork-core-pc-react.d.ts  sdkwork-ui-pc-react.d.ts
(+121 files in other folders)
