[workspace]
resolver = "2"
members = [
    "packages/native-rust/image/sdkwork-image-core-rust",
    "packages/native-rust/image/sdkwork-image-provider-claw-router-rust",
    "packages/native-rust/image/sdkwork-image-service-rust",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
# SDKWork workspace members - declared once at workspace root
sdkwork-image-core-rust = { path = "packages/native-rust/image/sdkwork-image-core-rust" }
sdkwork-image-provider-claw-router-rust = { path = "packages/native-rust/image/sdkwork-image-provider-claw-router-rust" }
sdkwork-image-service-rust = { path = "packages/native-rust/image/sdkwork-image-service-rust" }
clawrouter-open-sdk = { path = "../sdkwork-claw-router/sdks/clawrouter-open-sdk/clawrouter-open-sdk-rust/generated/server-openapi" }
sdkwork-drive-product = { path = "../sdkwork-drive/services/sdkwork-drive-product" }
