[workspace]
resolver = "2"
members = [
    "crates/sdkwork-image-database-host",
    "crates/sdkwork-image-generation-service",
    "crates/sdkwork-image-generation-workflow-service",
    "crates/sdkwork-image-claw-router-provider-service",
    "crates/sdkwork-image-generation-repository-sqlx",
    "crates/sdkwork-router-image-open-api",
    "crates/sdkwork-router-image-app-api",
    "crates/sdkwork-router-image-backend-api",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
sdkwork-image-database-host = { path = "crates/sdkwork-image-database-host" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
sdkwork_database_config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork_database_lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork_database_spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork_database_sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
# SDKWork workspace members - declared once at workspace root
sdkwork-image-generation-service = { path = "crates/sdkwork-image-generation-service" }
sdkwork-image-generation-workflow-service = { path = "crates/sdkwork-image-generation-workflow-service" }
sdkwork-image-claw-router-provider-service = { path = "crates/sdkwork-image-claw-router-provider-service" }
sdkwork-image-generation-repository-sqlx = { path = "crates/sdkwork-image-generation-repository-sqlx" }
sdkwork-router-image-open-api = { path = "crates/sdkwork-router-image-open-api" }
sdkwork-router-image-app-api = { path = "crates/sdkwork-router-image-app-api" }
sdkwork-router-image-backend-api = { path = "crates/sdkwork-router-image-backend-api" }
clawrouter-open-sdk = { path = "../sdkwork-claw-router/sdks/clawrouter-open-sdk/clawrouter-open-sdk-rust/generated/server-openapi" }
sdkwork-drive-workspace-service = { path = "../sdkwork-drive/crates/sdkwork-drive-workspace-service" }
