[workspace]
resolver = "2"
members = [
    "crates/sdkwork-api-image-assembly",
    "crates/sdkwork-image-gateway-assembly",
    "crates/sdkwork-image-database-host",
    "crates/sdkwork-image-generation-service",
    "crates/sdkwork-image-generation-mcp-service",
    "crates/sdkwork-image-generation-provider-spi",
    "crates/sdkwork-image-generation-provider-adapter",
    "crates/sdkwork-image-generation-workflow-service",
    "crates/sdkwork-image-generation-runtime-service",
    "crates/sdkwork-image-generation-host",
    "crates/sdkwork-image-generation-repository-sqlx",
    "crates/sdkwork-routes-image-open-api",
    "crates/sdkwork-routes-image-app-api",
    "crates/sdkwork-routes-image-backend-api",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
sdkwork-drive-storage-contract = { path = "../sdkwork-drive/crates/sdkwork-drive-storage-contract" }
sdkwork-drive-storage-local = { path = "../sdkwork-drive/crates/sdkwork-drive-storage-local" }
axum = { version = "0.8", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmcp = { version = "2.2.0", default-features = false, features = ["server", "macros", "schemars", "transport-io", "transport-streamable-http-server"] }
schemars = "1"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
sdkwork-iam-context-service = { path = "../sdkwork-iam/crates/sdkwork-iam-context-service" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-image-database-host = { path = "crates/sdkwork-image-database-host" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
# SDKWork workspace members - declared once at workspace root
sdkwork-image-generation-service = { path = "crates/sdkwork-image-generation-service" }
sdkwork-image-generation-mcp-service = { path = "crates/sdkwork-image-generation-mcp-service" }
sdkwork-image-generation-provider-spi = { path = "crates/sdkwork-image-generation-provider-spi" }
sdkwork-image-generation-provider-adapter = { path = "crates/sdkwork-image-generation-provider-adapter" }
sdkwork-image-generation-workflow-service = { path = "crates/sdkwork-image-generation-workflow-service" }
sdkwork-image-generation-repository-sqlx = { path = "crates/sdkwork-image-generation-repository-sqlx" }
sdkwork-routes-image-open-api = { path = "crates/sdkwork-routes-image-open-api" }
sdkwork-routes-image-app-api = { path = "crates/sdkwork-routes-image-app-api" }
sdkwork-routes-image-backend-api = { path = "crates/sdkwork-routes-image-backend-api" }
sdkwork-image-generation-runtime-service = { path = "crates/sdkwork-image-generation-runtime-service" }
sdkwork-image-generation-host = { path = "crates/sdkwork-image-generation-host" }
sdkwork-assets-bridge-image = { path = "../sdkwork-assets/crates/sdkwork-assets-bridge-image" }
sdkwork-assets-ingestion = { path = "../sdkwork-assets/crates/sdkwork-assets-ingestion" }
sdkwork-assets-ingestion-drive = { path = "../sdkwork-assets/crates/sdkwork-assets-ingestion-drive" }
clawrouter-open-sdk = { path = "../sdkwork-clawrouter/sdks/clawrouter-open-sdk/clawrouter-open-sdk-rust/generated/server-openapi" }
sdkwork-drive-workspace-service = { path = "../sdkwork-drive/crates/sdkwork-drive-workspace-service" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
