[package]
name = "sdkwork-api-image-assembly"
edition.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-image application HTTP plane."

[lib]
name = "sdkwork_api_image_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-image-generation-host.workspace = true
sdkwork-routes-image-app-api.workspace = true
sdkwork-routes-image-backend-api.workspace = true
sdkwork-routes-image-open-api.workspace = true
