[package]
name = "sdkwork-image-claw-router-provider-service"
version = "0.1.0"
edition = "2021"
description = "SDKWork image provider gateway backed by the generated Claw Router Rust SDK."

[lib]
name = "sdkwork_image_claw_router_provider_service"
path = "src/lib.rs"

[dependencies]
clawrouter-open-sdk.workspace = true
sdkwork-image-generation-service.workspace = true
serde_json = "1.0"
