[package]
name = "sdkwork-image-gateway-assembly"
edition.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-image application HTTP plane."

[lib]
name = "sdkwork_image_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork-image-generation-host.workspace = true
sdkwork-routes-image-app-api.workspace = true
sdkwork-routes-image-backend-api.workspace = true
sdkwork-routes-image-open-api.workspace = true
