[package]
name = "sdkwork-image-generation-mcp-service"
version.workspace = true
edition.workspace = true
description = "Model Context Protocol adapter for SDKWork image generation."

[dependencies]
rmcp.workspace = true
schemars.workspace = true
sdkwork-image-generation-service.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
async-trait = "0.1"
axum = { version = "0.8", default-features = false }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
