[package]
name = "sdkwork-image-generation-repository-sqlx"
version = "0.1.0"
edition = "2021"
description = "SDKWork image SQLx storage contract and migrations."

[lib]
name = "sdkwork_image_generation_repository_sqlx"
path = "src/lib.rs"

[dependencies]
sdkwork-database-config = { path = "../../../sdkwork-pool/crates/sdkwork-database-config" }
sdkwork-database-sqlx = { path = "../../../sdkwork-pool/crates/sdkwork-database-sqlx" }
