[package]
name = "sdkwork-image-generation-repository-sqlx"
version = "0.1.0"
edition = "2021"
description = "SDKWork image SQLx storage contract and migrations."

[lib]
name = "sdkwork_image_generation_repository_sqlx"
path = "src/lib.rs"

[dependencies]
sdkwork-image-database-host.workspace = true
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
