[package]
name = "sdkwork-image-generation-service"
version = "0.1.0"
edition = "2021"
description = "SDKWork image domain core contracts."

[lib]
name = "sdkwork_image_generation_service"
path = "src/lib.rs"

[dependencies]
sdkwork-drive-workspace-service.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
