[package]
name = "sdkwork-image-generation-service"
version = "0.1.0"
edition = "2021"
description = "SDKWork image domain core contracts."

[lib]
name = "sdkwork_image_generation_service"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
sdkwork-drive-workspace-service.workspace = true
sdkwork-image-generation-provider-spi.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
