[package]
name = "sdkwork-image-generation-workflow-service"
version = "0.1.0"
edition = "2021"
description = "SDKWork image generation service orchestration contracts."

[lib]
name = "sdkwork_image_generation_workflow_service"
path = "src/lib.rs"

[dependencies]
sdkwork-image-generation-service.workspace = true
sdkwork-image-claw-router-provider-service.workspace = true
sdkwork-assets-bridge-image.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror = "2"

