[package]
name = "sdkwork-router-image-open-api"
version = "0.1.0"
edition = "2021"
description = "SDKWork image open-api Rust route manifest."

[lib]
name = "sdkwork_router_image_open_api"
path = "src/lib.rs"

[dependencies]
sdkwork-web-core = { path = "../../../sdkwork-web-framework/crates/sdkwork-web-core" }
axum = { version = "0.8", default-features = false, features = ["json"] }
sdkwork-iam-web-adapter = { path = "../../../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork-web-axum = { path = "../../../sdkwork-web-framework/crates/sdkwork-web-axum" }

[dev-dependencies]
sdkwork-web-core = { path = "../../../sdkwork-web-framework/crates/sdkwork-web-core" }
