[package]
name = "sdkwork-routes-image-app-api"
version = "0.1.0"
edition = "2021"
description = "SDKWork image app-api Rust routes."

[lib]
name = "sdkwork_routes_image_app_api"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-image-generation-host.workspace = true
sdkwork-iam-context-service.workspace = true
sdkwork-iam-web-adapter.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-core.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower.workspace = true
clawrouter-open-sdk.workspace = true
sdkwork-image-claw-router-provider-service.workspace = true
