[package]
name = "sdkwork-routes-image-open-api"
version = "0.1.0"
edition = "2021"
description = "SDKWork image open-api Rust route manifest."

[lib]
name = "sdkwork_routes_image_open_api"
path = "src/lib.rs"

[dependencies]
sdkwork-web-core = { workspace = true }
axum = { version = "0.8", default-features = false, features = ["json"] }
sdkwork-iam-web-adapter = { workspace = true }
sdkwork-web-axum = { workspace = true }

[dev-dependencies]
sdkwork-web-core = { workspace = true }
